# software-arm-incubation

./: .gitattributes  .gitignore  .gitmodules  README.md  mcuxpresso-code-style-formatter.xml  selfbus-eclipse-format-1.0.xml
CUnit/: .cproject  .project  README
Catch/: .cproject  .project
actuators/blind-shutter/rol-jal-bim112/: .cproject  .project  CMakeLists.txt  README.md
actuators/blind-shutter/rol-jal-bim112/src/: app-rol-jal.cpp  app-rol-jal.h  app_main.cpp  app_main.h  blind.cpp  blind.h  channel.cpp  channel.h  config.h  hand_actuation.cpp  shutter.cpp  shutter.h  todo.txt
app-common/: hand_actuation.cpp  hand_actuation.h
bootloader/bootloader/: .cproject  .project
bootloader/common/: boot_descriptor_block.c  boot_descriptor_block.h  crc.c
bootloader/test-app/: .cproject  .project
bootloader/updater/: .cproject  .project
common/bus_voltage/: app_nov_settings.h  bus_voltage.cpp  bus_voltage.h
common/hand-actuation/: hand_actuation.cpp  hand_actuation.h
common/leds/: LedIndication.cpp  LedIndication.h
dustsensor-bcu1/: .cproject
dustsensor-bcu1/src/: app_main.cpp  app_main_false.cpp  fragen.txt
ft12/: .cproject
in16-bim112/: .cproject  .gitignore  .project  in16-bim112 Attach Only.launch  in16-bim112 Release.launch
in16-bim112/src/: app_in.cpp  app_in.h  app_main.cpp  channel.cpp  channel.h  com_objs.h  input.cpp  input.h  jalo.cpp  jalo.h  params.h  switch.cpp  switch.h
in4-bcu2/: .cproject  README
in4-bcu2/src/: app_in4.cpp  app_in4.h  app_main.cpp  params.h
in8-bcu1/: .cproject  .gitignore  .project  README
in8-bcu1/src/: app_in8.c  app_in8.cpp  app_in8.h  app_main.cpp  com_objs.h  cr_startup_lpc11xx.cpp  dimEncoder.h  dimmer.cpp  dimmer.h  driver_config.h  jalo.cpp  main.c  params.h  switch.cpp
misc/: .cproject  README.md
misc/HoermannGateway/: .cproject  .project  CMakeLists.txt  CMakePresets.json  README.md  hoermann_gateway.cmake
misc/HoermannGateway/inc/: CRC.h  HelperFunctions.h  Hoermann.h  HoermannState.h  config.h  hoermann_dump.h  hoermann_protocol.h
misc/HoermannGateway/linkscripts/: HoermannGateway_Debug_complete.ld
misc/HoermannGateway/src/: CRC.cpp  HelperFunctions.cpp  Hoermann.cpp  app_main.cpp  hoermann_dump.cpp
misc/HoermannGateway/tools/logmx_hoermann_parser/: README.md  build.gradle.kts  settings.gradle.kts
misc/HoermannGateway/tools/logmx_hoermann_parser/src/main/java/org/selfbus/logMx/: HoermannGatewayRS485Parser.java
misc/MultiSensorAktor/: .cproject  .project  README.md
misc/OneWireGateway-bim112/: .cproject  .project
misc/Rauchmelder-bcu1/: .cproject  .project  Konfigurationsparameter.txt  README.md  Rauchmelder-bcu1 Debug.launch  Rauchmelder-bcu1 Release.launch
misc/USB-Interface-bcu1/: README.md
misc/ft12/: .cproject  .project  README.md
misc/torsteuerung/: .cproject
misc/weatherstation-bim112/: .cproject  .project
out8-bcu1/: .cproject  .project  README
out8-bcu1/src/: app_main.cpp  app_out8.cpp  app_out8.h  com_objs.h  outputs.cpp  outputs.h  outputsBiStable.cpp  outputsBiStable.h
python/: Address_Table.py  Assoc_Table.py  Bus_Monitor.py  Com_Table.py  Device.py  EEPROM.py  FPC_AM.py  FPC_AM_Simulator.py  Jung_2138.py  Telegram.py  Test_Case.py  Test_Case_Store.py  Trx2Test_Case.py  VD2Sqlite.py  _Object_.py  _Table_.py
rol-jal-bcu1/: .cproject  .project
rol-jal-bcu1/src/: MonoOutputs.cpp  MonoOutputs.h  app-rol-jal.cpp  app_main.cpp  blind.cpp  blind.h  config.h  hand_actuation.cpp  outputs.cpp  outputs.h  shutter.cpp  shutter.h
rol-jal-bim112/: .cproject  .project
rol-jal-bim112/src/: app_main.cpp  blind.cpp  blind.h  channel.h  config.h  hand_actuation.cpp  hand_actuation.h  shutter.cpp  todo.txt
sbapp-in4/: .cproject  .project  README
sbapp-in4-cpp/: .cproject  .gitignore  .project  DEPRECATED.txt
sbapp-in4-cpp/src/: app_main.cpp
sbapp-in4/src/: app_in4.c  app_in4.h  driver_config.h  main.c
sblib/: .cproject  .gitignore  .project  README  liblinks.xml
sblib-cpp/: .cproject  .gitignore  .project  README  liblinks.xml
sblib-cpp-test/: .cproject  .gitignore  .project
sblib-cpp-test/cpu-emu/: LPC11xx.h  core_cm0.h  core_cmFunc.h  core_cmInstr.h  iap_emu.h  system_lpc11xx.c  timer.cpp
sblib-cpp-test/inc/: protocol.h
sblib-cpp-test/src/: protocol.cpp  wrapper.cc
sblib-cpp/src/: analog_pin.cpp  arrays.cpp  buffered_stream.cpp  debounce.cpp  debug.cpp  digital_pin.cpp  digital_pin_port.cpp  digital_pin_pulse.cpp  digital_pin_shift.cpp  eeprom.cpp  eib.cpp  hooks.cpp  iap.cpp  ioports.cpp  main.cpp  new.cpp  platform.cpp  print.cpp  serial.cpp  serial0.cpp  spi.cpp  stream.cpp  timer.cpp  utils.cpp
sblib-examples/example-analog-read/: .cproject  .project  README.txt
sblib-examples/example-blink/: .cproject  .project
sblib-examples/example-bus-access-read-write/: .cproject  .project
sblib-examples/example-busmon/: .cproject  .gitignore  .project  README.txt
sblib-examples/example-busmon-graphlcd/: .project
sblib-examples/example-graphlcd/: .cproject  .project
sblib-examples/example-int-blink/: .cproject
sblib-examples/example-pulsed-blink/: .cproject  .project
sblib-tests/: .cproject  .project  README
sblib/src/: main.c  (+31 more)
sensors/binary-inputs/in8-bcu1/: .cproject  .project  CMakeLists.txt  README.md
sensors/binary-inputs/in8-bcu1/src/: app_in8.cpp  app_in8.h  app_main.cpp  com_objs.h  dimEncoder.cpp  dimmer.cpp  jalo.cpp  params.h  switch.cpp  switch.h
sensors/binary-inputs/rain-bim112/: .cproject  .gitignore  .project  CMakeLists.txt  README.md  rain-bim112 LinkServer Debug.launch
sensors/binary-inputs/rain-bim112/resources/: M-0083_A-004F-11-8560.xml  SCN-RS1R.01 Regensensor.knxprod  conf.py
sensors/binary-inputs/rain-bim112/src/: app_main.cpp  common.h  log  params.h
sensors/misc/4sense/: .cproject  .gitignore  .project  CMakeLists.txt  readme.md
sensors/misc/4sense/resources/: conf.py
sensors/misc/4sense/src/: SensorConfig.cpp  SensorConfig.h  Threshold.cpp  Threshold.h  app_main.cpp  common.h  setup.cpp
sensors/misc/4sense/src/log/: logger.cpp  logger.h  readme.md
tests/: README
torsteuerung/: .cproject
(+779 files in other folders)
